<resources>
    <string name="app_name">Amazon</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="prime">Prime</string>
    <string name="fashion">Fashion</string>
    <string name="fresh">Fresh</string>
    <string name="furniture">Furniture</string>
    <string name="beauty">Beauty</string>
    <string name="logo">logo</string>
    <string name="floatingactionbutton">floatingactionbutton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="electronics">Electronics</string>
    <string name="fashions">Fashion</string>


</resources>