<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior = "single">
        <item
            android:id="@+id/nav_prime"
            android:icon="@drawable/baseline_trending_up_24"
            android:title="@string/prime" />

        <item android:title="@string/electronics"
            android:id="@+id/nav_electronics"
            android:icon="@drawable/baseline_devices_24" />

        <item android:id="@+id/nav_fashion"
            android:title="@string/fashions"
            android:icon="@drawable/baseline_wc_24" />

        <item android:icon="@drawable/baseline_fastfood_24"
            android:id="@+id/nav_fresh"
            android:title="@string/fresh" />

        <item android:title="@string/beauty"
            android:icon="@drawable/baseline_auto_fix_high_24"
            android:id="@+id/nav_beauty" />

        <item android:id="@+id/nav_furniture"
            android:title="@string/furniture"
            android:icon="@drawable/baseline_weekend_24" />
    </group>
</menu>